# qml_threadpool

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/: async_event.hpp  make_string.hpp  task_info.hpp  task_model.hpp  tasks.hpp  thread_pool.hpp
qml/: SideBar.qml  TaskCreator.qml  TaskList.qml  main.qml  qml.qrc
src/: main.cpp  task_model.cpp  thread_pool.cpp
